[refactor] Address reinhapa review on PR #6283
- SessionManager: promote SecureRandom to a static final field
  (it is thread-safe; no need for a per-instance instance).
- JMXServlet: drop the org.apache.commons.lang3.StringUtils import
  in favour of native String.isBlank() / null checks for the two
  call sites in this file.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>